--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+*{
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,42 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.container{
+  max-width: 1200px;
+  padding: 15px;
+  margin: 0 auto;
+}
+.form-fuild{
+  border: 1px solid #333;
+  padding: 30px;
+}
+.form-fuild label{
+  margin-bottom: 15px;
+  font-size: 16px;
+  display: block;
+  font-weight: 600;
+}
+.form-fuild input:not([type="submit"]),.form-fuild select{
+  font-size: 16px;
+  width: 100%;
+  max-width: 400px;
+  background-color: transparent;
+  border: 1px solid #333;
+  margin-bottom: 15px;
+  padding: 15px;
+}
+.btn-wrapper button{
+  background-color: cadetblue;
+  color: #fff;
+  font-size: 18px;
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.btn-wrapper button:hover{
+  background-color: burlywood;
+  color: #000;
 }
